<resources>
    <string name="hello">Hello World, FileManagerActivity!</string>
    <string name="app_name">FileManager</string>
    <string name="title_category">Category</string>
    <string name="title_sdcard">File</string>
    <string name="title_internal_sdcard">Internal SD</string>
    <string name="title_external_sdcard">External SD</string>
    <string name="title_rom_sdcard">ROM SD</string>
    <string name="no_sdcard">No Sdcard</string>
    <string name="file_size">%d Bytes</string>
    <string name="root_path_text">SDcard</string>
    <string name="category_all">All</string>
    <string name="category_apk">APKs</string>
    <string name="category_document">Docs</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_music">Music</string>
    <string name="category_other">Misc</string>
    <string name="category_picture">Pics</string>
    <string name="category_theme">Themes</string>
    <string name="category_video">Videos</string>
    <string name="category_zip">Zips</string>
    <string name="category_search">Search</string>
    <string name="enable_sd_card">SD card is not available, please connect one</string>
    <string name="no_file">No files</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_sort">Sort by</string>
    <string name="menu_item_sort_date">Date</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_size">Size</string>
    <string name="menu_item_sort_type">Type</string>
    <string name="menu_setting">Preferences</string>
    <string name="menu_exit">Exit</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_cancel_selectall">Deselect All</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_copy_title">Copy Operation</string>
    <string name="operation_copy_path">Copy file path</string>
    <string name="operation_create_folder">New folder</string>
        <string name="operation_new_folder">New</string>
    <string name="operation_create_folder_message">Enter folder name</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_delete_confirm_message">Confirm Deletion?</string>
    <string name="operation_deleting">Deleting...</string>
    <string name="operation_favorite">Add to Tags</string>
    <string name="operation_hide_sys">Hide Hidden Files</string>
    <string name="operation_info">Details</string>
    <string name="operation_move">Move</string>
    <string name="operation_move_title">Mobile Operation</string>
    <string name="operation_moving">Moving...</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_copying">Copying...</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_rename_message">Enter a new name</string>
    <string name="operation_selectall">Select All</string>
    <string name="operation_send">Send</string>
    <string name="operation_show_sys">Show Hidden Files</string>
    <string name="operation_unfavorite">Remove from Tags</string>
    <string name="operation_bugmenu">""</string>
    <string name="operation_select_operation">File Operations</string>
    <string name="operation_search">Search</string>
    <string name="operation_create_shortcut">Create Shortcut</string>
    <string name="operation_compress">Compress</string>
    <string name="compress_success">Compress success!</string>
    <string name="compress_failure">Compress failure!</string>
    <string name="compressing">Compressing...</string>
    <string name="zip_exist">Zip file already exists!</string>
    <string name="operation_decompress">Decompress</string>
    <string name="decompress_success">Decompress success!</string>
    <string name="decompress_failure">Decompress failure!</string>
    <string name="decompressing">Decompressing...</string>
    <string name="errror_notrarfile">Not RAR files!</string>
    <string name="error_isencrypted">Is encrypted files!</string>
    <string name="new_folder_name">New folder</string>
    <string name="fail_to_create_folder_exist">Failed to create the folder, the folder already exists</string>
    <string name="fail_to_create_folder">Failed to create the folder!</string>
    <string name="multi_select_title">Selected %1$s item(s)</string>
    <string name="dialog_select_type">Select file type</string>
    <string name="dialog_type_text">Text</string>
    <string name="dialog_type_audio">Audio</string>
    <string name="dialog_type_video">Video</string>
    <string name="dialog_type_image">Image</string>
    <string name="error_info_cant_send_folder">Unable to send the folder</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Hidden:</string>
    <string name="file_info_location">Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">Size:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_know">Close</string>
    <string name="added_favorite">Added to Favorites</string>
    <string name="removed_favorite">Removed from Favorites</string>
    <string name="toast_select_file">Please select a file</string>
    <string name="toast_keywords_isempty">Keywords Can Not Empty</string>
    <string name="hint_search">Please Enter Search Keywords</string>
    <string name="str_settings_normal">Basic Settings</string>
    <string name="str_settings_show_hidefile">Show Hidden Files</string>
    <string name="str_only_show_name">Only Show FileName</string>
    <string name="summary_on_onlyshowname">Only Show FileName</string>
    <string name="summary_off_onlyshowname">Show Detailed Information</string>
    <string name="str_display_settings">Display Settings</string>
    <string name="str_sort_settings">Sort Settings</string>
    <string name="str_sort_desc">Descending Sort</string>
    <string name="summary_on_sortdesc">Descending Sort</string>
    <string name="summary_off_sortdesc">Ascending Sort</string>
    <string name="summary_on_show_hidefile">Show Hidden Files</string>
    <string name="summary_off_show_hidefile">Hide Hidden Files</string>
    <string name="toast_rename_file_exist">Rename Failure : File Exist</string>
    <string name="toast_move_file_exist">Move Failure : The source files and dest file is the same</string>
    <string name="toast_no_file_operation">No Operation Files</string>
    <string name="toast_no_support">Temporary Does Not Support This Type</string>
    <string name="toast_rename_success">Rename Success</string>
    <string name="toast_special_characters">Rename Failure : Don\'t Use Special Characters</string>
    <string name="toast_filename_is_not_empty">Filename Can Not Empty</string>
    <string name="toast_no_left_space_on_device">No Space Left On Device</string>
    <string name="cover_file_same_file">Cover The Same File！</string>
    <string name="message_data_to_large">Efforts Loading...</string>
    <string name="menu_operation_cover">The Same File(Coverage)</string>
    <string name="menu_operation_not_cover">The Same File(Not Coverage)</string>
    <string name="menu_cover">Coverage</string>
    <string name="menu_not_cover">Not Coverage</string>
    <string name="toast_folder_readonly">The Current Folder Is Read-Only</string>
    <string name="operation_same_filename">A file with the same name operation</string>
    <string name="use_same_operation">Apply this action to all files</string>
    <string name="same_file_message">The file %s has existed,do you want overwrite it?</string>
    <string name="skip_move_file_same_message">The file %s move failure ,the source files and dest file is the same</string>
    <string name="skip_move_file_insert_message">The folder %s move failure ,You cannot move a folder into itself.</string>
    <string name="skip_copy_file_insert_message">The folder %s copy failure ,You cannot copy a folder into itself.</string>
    <string name="skip">Skip</string>
    <string name="choose_path_confirm">Confirm</string>
    <string name="choose_path_cancel">Cancel</string>
    <string name="unmountedcapynotice">Stop copying File(s)! The SD Card Unmunted</string>
    <string name="unmountedmovenotice">Stop Moving File(s)! The SD Card Unmunted</string>
    <string name="maximumlength">Maximum length of 85!</string>
    <string name="extract_data">Extract data!</string>
    <string name="extract_data_failure">Extract data failure!</string>
    <string name="open_failure">Open failure!</string>
    <string name="no_app_open">Not find application to open this file!</string>
    <string name="sdcard_last">last</string>
    <string name="phone_type">Phone Type: </string>
    <string name="system_version">System Version: </string>
    <string name="phone_resolution">phone Resolution: </string>
    <string name="phone_mac_address">Mac Address: </string>
    <string name="root_yes">has</string>
    <string name="root_no">not</string>
    <string name="total">total: </string>
    <string name="used">used: </string>
    <string name="last">last: </string>
    <string name="used1">used</string>
    <string name="last1">last</string>
    <string name="no_rom">ROM card not found</string>
    <string name="sd_not_available">SD card is not available</string>
    <string name="menu_sdcard_info">Storage information</string>
    <string name="description">image</string>
    <string name="clear_garbage">Garbage clean-up</string>
    <string name="large_files">Large files</string>
    <string name="minimum_of_large_files">Minimum of large files</string>
    <string name="large_files_summary">The smallest value of the definition of large files</string>
    <string name="large_files_dialogtitle">Enter the minimum value of large files(M)</string>
    <string name="no_large_files">NO large files!</string>
    <string name="garbage_clear_able">There can clean up garbage:</string>
    <string name="system_cache">System Cache</string>
    <string name="sdcard_clear">SD card cleanup</string>
    <string name="empty_folder">Empty folder</string>
    <string name="temp_file">Temp file</string>
    <string name="thumb">Thumbnails</string>
    <string name="software_last">Software residues</string>
    <string name="other_check">Other check</string>
    <string name="apk_zip">APK installation package</string>
    <string name="big_file">Big file</string>
    <string name="fast_clear">Fast clean-up</string>
    <string name="stop_clear">Stop clean-up</string>
    <string name="cache">Cache</string>
    <string name="clear"> clear</string>
    <string name="title_total">There are</string>
    <string name="title_file"> files</string>
    <string name="title_used"> and used</string>
    <string name="title_room"> sizes</string>
    <string name="unknown">UnKnown</string>
    <string name="clear_warn">APK and large files, please carefully check</string>
    <string name="clear_over">Cleard</string>
    <string name="clear_success">Cleanup Success</string>
    <string name="clear_no_data">No data can be cleaned.</string>
    <string name="clear_select">Please select the content you want to delete.</string>
    <string name="clear_clear">clearing#8230</string>
    <string name="install_success">Successful</string>
    <string name="clear_title_defalut">There are 0 file, and used 0B size</string>
	<string name="clear_cache">Clear the cache</string>
	<string name="uninstall">Uninstall</string>
	<string name="install">install</string>
	<string name="clear_cache_prompt">Whether to clear the cache?</string>
	<string name="installed">installed</string>
	<string name="uninstalled">Uninstalled</string>
	<string name="update">update</string>
</resources>