<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sdinfo_bg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp" >

            <TextView
                android:id="@+id/detial_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_cache"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@color/clear_dividing_title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingLeft="16dp" >

            <TextView
                android:id="@+id/detial_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/clear_title_defalut"
                android:textColor="@color/clear_title"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/detial_select_all"
                android:layout_width="@dimen/progress_size"
                android:layout_height="@dimen/progress_size"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:button="@drawable/clear_checkbox" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@color/clear_dividing_title" />
    </LinearLayout>

    <ListView
        android:id="@+id/detial_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@color/sdinfo_bg_color"
        android:descendantFocusability="blocksDescendants"
        android:divider="@color/clear_dividing_content"
        android:dividerHeight="1dp" >
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/detial_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fast_clear" />

        <Button
            android:id="@+id/detial_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_clear"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>